# control_module

./: Cargo.toml  Embed.toml  README.md  ci.sh  memory.x  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
examples/: dma.rs
src/: lib.rs  main.rs  spi.rs
src/gui/: mod.rs
src/hardware/: debounce.rs  display.rs  io.rs  mod.rs  project.rs  switches.rs  timer.rs  ui.rs
