[package]
name = "control-module"
edition = "2021"
version = "0.1.0"
authors = ["deltronix <douwe@deltronix.nl>"]
test = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
# RTIC
rtic = { version = "2.1.1", features = ["cortex-m", "rtic-monotonics", "thumbv7-backend"] }
rtic-sync = "1.2.0"
rtic-monotonics = "1.5.0"
# HAL
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f405", "rtic2", "defmt", "rtic1"] }
st7565 = { git = "https://www.github.com/deltronix/st7565" }
embedded-hal = "1.0.0"
display-interface-spi = "0.4.1"
embedded-graphics = "0.8.1"
dwt-systick-monotonic = {version="1.1.0", features=["extend"]}
heapless = { version = "0.8.0", features = ["defmt-03"] }
statig = "0.3.0"
bitfield-struct = "0.5.6"
rtic-time = "1.3.0"
fugit = { version = "0.3.7", features = ["defmt"] }
atomic-polyfill = "1.0.3"
tempo-clock = { path = "../tempo-clock" }
ad57xx = { path = "../ad57xx" }
embedded-hal-bus = { version = "0.1.0", features = ["async", "defmt-03"] }
critical-section = "1.1.2"
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
ringbuffer = { version = "0.15.0", default-features = false }
midly = { version = "0.5.3", default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
